# Sun-Eruption-Detection

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  log.config  notes.txt  pyproject.toml
.github/workflows/: ci.yml
static/: 2014_01_08__03_44_37_54__SDO_AIA_AIA_171.jp2  erupt_str.sav
sun_eruption_detection/: __main__.py  consts.py  models.py  sun_eruption_finder.py  temp.py  tmp.txt  utils.py
sun_eruption_detection/error_handling/: exceptions.py
sun_eruption_detection/scripts/: consts.py  image_amount_reducer.py  images_to_video_converter.py  sun_image_scraper.py
sun_eruption_detection/static/: 2014_01_08__03_28_23_34__SDO_AIA_AIA_171.jp2
sun_eruption_detection/static/images/: 2014_01_08__03_28_59_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_29_35_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_30_47_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_31_23_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_31_59_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_32_35_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_33_11_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_33_47_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_34_59_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_35_35_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_36_11_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_36_47_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_37_23_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_37_59_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_38_35_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_39_11_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_39_47_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_40_59_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_41_35_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_42_11_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_42_47_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_43_23_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_45_11_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_45_49_14__SDO_AIA_AIA_171.jp2  2014_01_08__03_46_23_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_47_00_45__SDO_AIA_AIA_171.jp2  2014_01_08__03_47_35_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_48_11_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_48_47_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_49_23_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_49_59_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_50_37_55__SDO_AIA_AIA_171.jp2  2014_01_08__03_51_11_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_51_49_14__SDO_AIA_AIA_171.jp2  2014_01_08__03_53_00_45__SDO_AIA_AIA_171.jp2  2014_01_08__03_53_35_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_54_47_34__SDO_AIA_AIA_171.jp2  2014_01_08__03_55_25_28__SDO_AIA_AIA_171.jp2  2014_01_08__03_56_36_69__SDO_AIA_AIA_171.jp2  2014_01_08__03_57_11_34__SDO_AIA_AIA_171.jp2  (+63 more)
sun_eruption_detection/static/marked_images/: 2014_01_08__03_28_23_34__SDO_AIA_AIA_171.jp2  (+32 more)
(+27 files in other folders)
