[tool.poetry]
name = "sun-eruption-detection"
version = "0.1.0"
description = ""
authors = ["Dawid Schwnge"]
readme = "README.md"
packages = [{include = "sun_eruption_detection"}]

[tool.poetry.dependencies]
python = "3.10.6"
scipy = "^1.10.1"
numpy = "^1.24.3"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
opencv-python = "^4.7.0.72"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
isort = "^5.12.0"
autoflake = "^2.0.1"
flake8 = "^6.0.0"
bandit = "^1.7.4"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
force_grid_wrap = 0
line_length = 120

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.autoflake]
in-place = true
remove-all-unused-imports = true
ignore-init-module-imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
