[tool.poetry]
name = "sun-eruption-detection"
version = "0.1.0"
description = ""
authors = ["Dawid Schwinge"]
readme = "README.md"
packages = [{include = "sun_eruption_detection"}]

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.10.1"
numpy = "^1.24.3"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
opencv-python = "^4.7.0.72"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
mypy = "^1.4.1"
ruff = "^0.0.282"
pip-audit = "^2.6.1"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
