[tool.poetry]
name = "sun-eruption-detection"
version = "0.1.0"
description = ""
authors = ["Dawid Schwinge"]
readme = "README.md"
packages = [{include = "sun_eruption_detection"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scipy = "^1.11.1"
numpy = "^1.24.3"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
opencv-python = "^4.7.0.72"
click = "^8.1.6"
bs4 = "^0.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.4.1"
ruff = "^0.0.282"
pip-audit = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.mypy]
strict = true
files = ["sun_eruption_detection"]

[tool.ruff]
line-length = 120
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I001",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "S",  # flake8-bandit
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]
